Fix button not hiding fileupload overflow

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -44,6 +44,8 @@
     min-width: @avatar-size--base;
     padding: 7px 10px;
     text-align: left;
+    overflow: hidden;
+    position: relative;
   }
 
   &--beatmap-discussion-new {
